<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="wrap_content" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/blank0"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:text="@string/blank"/>
        <TextView
            android:layout_below="@id/blank0"
            android:id="@+id/tourTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/myTColor"
            android:textSize="30sp"
            android:text="@string/tourTitle" />
        <TextView
            android:layout_below="@id/tourTitle"
            android:id="@+id/blank1"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:text="@string/blank"/>
        <TextView
            android:layout_below="@id/blank1"
            android:id="@+id/tourAddress"
            android:typeface ="monospace"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:textColor="@color/myTColor"
            android:ellipsize="end"
            android:text="@string/tourAddress"
            android:textSize="20sp"
            android:maxLines="1" />
        <TextView
            android:layout_below="@id/tourAddress"
            android:id="@+id/blank2"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:text="@string/blank"/>
        <TextView
            android:layout_below="@id/blank2"
            android:id="@+id/tourTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/myTColor"
            android:typeface ="monospace"
            android:ellipsize="end"
            android:text="@string/tourTime"
            android:textSize="20sp"
            android:maxLines="1" />
        <TextView
            android:layout_below="@id/tourTime"
            android:id="@+id/blank3"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:text="@string/blank"/>
        <TextView
            android:layout_below="@id/blank3"
            android:id="@+id/tourIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/myTColor"
            android:typeface ="monospace"
            android:ellipsize="end"
            android:text="@string/tourIntro"
            android:textSize="20sp"
            android:maxLines="1" />
        <!--<TextView-->
            <!--android:layout_below="@id/blank2"-->
            <!--android:id="@+id/tourIntro"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/myTColor"-->
            <!--android:ellipsize="end"-->
            <!--android:text="@string/tourIntro"-->
            <!--android:textSize="20sp"-->
            <!--android:maxLines="1" />-->
        <TextView
            android:layout_below="@id/tourIntro"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:text="@string/blank"/>
    </RelativeLayout>
</FrameLayout>